<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#f5f5f5"
    android:orientation="horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/idText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="1"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/historicDateText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/date_example"
            android:textSize="20sp" />

        <TextView
            android:maxLength="10"
            android:id="@+id/typeOfExpenseText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/type_of_expense_example"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/valueText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/money_example"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>